--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "body-parser": "^1.19.0",
     "connect-flash": "0.1.1",
     "connect-redis": "1.4.7",
+    "cookie-parser": "^1.4.5",
     "ejs": "0.8.5",
     "express": "4.6.1",
     "express-handlebars": "^5.1.0",
