--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "license": "MIT",
   "dependencies": {
     "body-parser": "^1.19.0",
-    "connect-flash": "0.1.1",
+    "connect-flash": "^0.1.1",
     "connect-redis": "^1.5.0",
     "cookie-parser": "^1.4.5",
     "csurf": "^1.11.0",
